fix category overflow

--- a/css/style.css
+++ b/css/style.css
@@ -98,10 +98,14 @@ a {
     height: 313px;
 }
 
+.item-top-bar-container {
+    width: 100%;
+    overflow-x: auto;
+}
+
 .item-top-bar {
     display: flex;
     height: 48px;
-    width: 100%;
     align-items: center;
     padding: 0 12px;
 }
@@ -118,6 +122,7 @@ a {
     padding: 5px;
     margin-right: 4px;
     border: 1px solid #bfbfbf;
+    flex-shrink: 0;
 }
 
 .item-bottom-bar {
